<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">


            <TextView
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:text="@string/my_profile"
                android:textColor="#0000ff"
                android:layout_marginTop="15dp"
                android:textSize="30dp" />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/org"/>

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">


            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pesan"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/menu"
                        android:textColor="#b22222"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/makanan"/>

                    <TextView
                        android:id="@+id/textview_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/profile"
                        android:textColor="#b22222"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/bintang"/>

                    <TextView
                        android:id="@+id/textview_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/favorite"
                        android:textColor="#b22222"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/awan"/>

                    <TextView
                        android:id="@+id/textview_komentar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:textColor="#b22222"
                        tools:text="Komentar" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/jadwal"/>

                    <TextView
                        android:id="@+id/textview_jadwal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/jadwal"
                        android:textColor="#b22222"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView>

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                android:orientation="center"
                android:gravity="center_vertical>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/home"/>

                    <TextView
                        android:id="@+id/textview_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/home"
                        android:textColor="#b22222"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>



    </LinearLayout>




</ScrollView>
